--- a/ConfeitariaLogWeb/WebContent/fornecedorListagem.xhtml
+++ b/ConfeitariaLogWeb/WebContent/fornecedorListagem.xhtml
@@ -10,51 +10,51 @@
 </h:head>
 <h:body>
 	<h1>Sistema de Logistica de Confeitaria</h1>
-	<h2>Gerenciamento de Funcionários</h2>
+	<h2>Gerenciamento de Fornecedores</h2>
 
 	<h:form>
 		<!-- <h:outputLabel value="Filtrar por" for="chaveNome"/>
 		<h:inputText id="chaveNome" value="#{alunoControlador.chaveNome}"/>
 		<h:commandButton action="null" value="Buscar"/> -->
-		<p:commandButton action="#{funcionarioControlador.incluir}"
+		<p:commandButton action="#{fornecedorControlador.incluir}"
 			value="Novo" />
 		<p:commandButton action="index" value="Voltar" />
-		<p:dataTable value="#{funcionarioControlador.funcionarios}"
-			var="funcionario" border="1">
+		<p:dataTable value="#{fornecedorControlador.fornecedores}"
+			var="fornecedor" border="1">
 			<p:column>
 				<f:facet name="header">ID</f:facet>
-				#{funcionario.id}
+				#{fornecedor.id}
 			</p:column>
 			<p:column>
 				<f:facet name="header">Nome</f:facet>
-				#{funcionario.nome}
+				#{fornecedor.nome}
 			</p:column>
 			<p:column>
-				<f:facet name="header">CPF</f:facet>
-				#{funcionario.cpf}
+				<f:facet name="header">CNPJ</f:facet>
+				#{fornecedor.cnpj}
+			</p:column>
+			<p:column>
+				<f:facet name="header">Endereço</f:facet>
+				#{fornecedor.endereco}
 			</p:column>
 			<p:column>
 				<f:facet name="header">Telefone</f:facet>
-				#{funcionario.telefone}
+				#{fornecedor.telefone}
 			</p:column>
 			<p:column>
-				<f:facet name="header">Sexo</f:facet>
-				#{funcionario.sexo}
+				<f:facet name="header">E-mail</f:facet>
+				#{fornecedor.email}
 			</p:column>
 			<p:column>
-				<f:facet name="header">Idade</f:facet>
-				#{funcionario.idade}
-			</p:column>
-			<p:column>
-				<f:facet name="header">Endereco</f:facet>
-				#{funcionario.endereco}
+				<f:facet name="header">Categoria</f:facet>
+				#{categoria.nome}
 			</p:column>
 			<p:column>
 				<f:facet name="header">Operações</f:facet>
 				<p:commandButton value="Editar/Salvar" icon="pi pi-save"
-					action="#{funcionarioControlador.editar(funcionario)}" />
+					action="#{fornecedorControlador.editar(fornecedor)}" />
 				<p:commandButton value="Excluir"
-					action="#{funcionarioControlador.excluir(funcionario)}" />
+					action="#{fornecedorControlador.excluir(fornecedor)}" />
 			</p:column>
 		</p:dataTable>
 	</h:form>
