--- a/ConfeitariaLogWeb/WebContent/index.xhtml
+++ b/ConfeitariaLogWeb/WebContent/index.xhtml
@@ -2,29 +2,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<title>Sistema de Controle Acadêmico</title>
+	<title>Sistema de Logistica de Confeitaria</title>
 </h:head>
 <h:body>
-	<h1>Sistema de Controle Acadêmico</h1>
+	<h1>Sistema de Logistica de Confeitaria</h1>
 	<h2>Entidades Gerenciadas</h2>
-	
-	<h:form>
-	<ul>
-		<li>
-			<h:commandLink action="funcionarioListagem" value="Alunos"/>
-		</li>
-		<!-- <li>
-			<h:commandLink action="fornecedorListagem" value="Cursos"/>
-		</li> -->
 
-	</ul>
-		
+	<h:form>
+		<ul>
+			<li><h:commandLink action="funcionarioListagem"
+					value="Funcionarios" /></li>
+
+			<li><h:commandLink action="fornecedorListagem"
+					value="Fornecedores" /></li>
+					
+			<li><h:commandLink action="categoriaListagem"
+					value="Categorias" /></li>
+					
+			<li><h:commandLink action="materialListagem"
+					value="Materiais" /></li>
+			
+			<li><h:commandLink action="pedidoListagem"
+					value="Pedidos" /></li>
+
+
+		</ul>
+
 	</h:form>
-	
+
 </h:body>
 </html>
