--- a/ConfeitariaLogWeb/WebContent/categoriaListagem.xhtml
+++ b/ConfeitariaLogWeb/WebContent/categoriaListagem.xhtml
@@ -39,7 +39,9 @@
 			</p:column>
 			<p:column>
 				<f:facet name="header">Operações</f:facet>
-				<p:commandButton value="Editar/Salvar" icon="pi pi-save"
+				
+		
+				<p:commandButton value="Editar" icon="pi pi-save"
 					action="#{categoriaControlador.editar(categoria)}" />
 				<p:commandButton value="Excluir"
 					action="#{categoriaControlador.excluir(categoria)}" />
