Criação de páginas WEB

--- a/ConfeitariaLogWeb/WebContent/fornecedorListagem.xhtml
+++ b/ConfeitariaLogWeb/WebContent/fornecedorListagem.xhtml
@@ -47,7 +47,7 @@
 			</p:column>
 			<p:column>
 				<f:facet name="header">Categoria</f:facet>
-				#{categoria.nome}
+				#{fornecedor.categorias.getNome()}
 			</p:column>
 			<p:column>
 				<f:facet name="header">Operações</f:facet>
