--- a/ConfeitariaLogWeb/WebContent/categoriaListagem.xhtml
+++ b/ConfeitariaLogWeb/WebContent/categoriaListagem.xhtml
@@ -35,7 +35,7 @@
 			</p:column>
 			<p:column>
 				<f:facet name="header">Fornecedor</f:facet>
-				#{fornecedor.nome}
+				#{categoria.fornecedor.getNome()}
 			</p:column>
 			<p:column>
 				<f:facet name="header">Operações</f:facet>
