Atualização de codigo erro em Pedidos

--- a/ConfeitariaLogWeb/WebContent/categoriaEdicao.xhtml
+++ b/ConfeitariaLogWeb/WebContent/categoriaEdicao.xhtml
@@ -12,12 +12,12 @@
 <h:body>
 
 <h1>Sistema de Logistica de Confeitaria</h1>
-<h2>Inclusão de Categoria</h2>
+<h2>Edição de Categoria</h2>
 
 <h:form>
  <p:panelGrid columns="2">
   <h:outputLabel value="ID:" for="id" />
-  <p:inputMask id="id"  mask="" value="#{categoriaControlador.categoria.id}" />
+  <p:inputMask id="id"  mask="" disabled="true" value="#{categoriaControlador.categoria.id}" />
   <h:outputLabel value="Nome:" for="nome" />
   <p:inputText id="nome" value="#{categoriaControlador.categoria.nome}" />
   <h:outputLabel value="Descrição:" for="descricao" />
@@ -30,7 +30,7 @@
    var="fornecedor" itemValue="#{fornecedor.id}" itemLabel="#{fornecedor.nome}" />
   </h:selectOneMenu>
  </p:panelGrid>
- <p:commandButton action="#{categoriaControlador.adicionar}" value="Confirmar" />
+ <p:commandButton action="#{categoriaControlador.atualizar}" value="Confirmar" />
  <p:commandButton action="categoriaListagem" value="Cancelar" />
 </h:form>
 
