--- a/ConfeitariaLogWeb/WebContent/funcionarioExclusao.xhtml
+++ b/ConfeitariaLogWeb/WebContent/funcionarioExclusao.xhtml
@@ -12,7 +12,7 @@
 <h:body>
 
 <h1>Sistema de Logistica de Confeitaria</h1>
-<h2>Inclusão de Funcionario</h2>
+<h2>Exclusão de Funcionario</h2>
 
 <h:form>
  <p:panelGrid columns="2">
