--- a/ConfeitariaLogWeb/WebContent/404.xhtml
+++ b/ConfeitariaLogWeb/WebContent/404.xhtml
@@ -6,7 +6,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition template="/template/main.xhtml">
+<!-- <ui:composition template="/template/main.xhtml"> -->
 
 	<ui:define name="content">
 		<h1>ERRO 404 - PAGINA NÃO ENCONTRADA</h1>
@@ -17,5 +17,5 @@
 		</h:form>
 
 	</ui:define>
-</ui:composition>
+<!-- </ui:composition> -->
 </html>
