--- a/ConfeitariaLogWeb/WebContent/500.xhtml
+++ b/ConfeitariaLogWeb/WebContent/500.xhtml
@@ -6,8 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+<!-- Tentativa de composição de paginas
 <ui:composition template="/template/main.xhtml">
-
+ -->
 	<ui:define name="content">
 
 		<h1>ERRO 500</h1>
@@ -18,5 +19,5 @@
 		</h:form>
 
 	</ui:define>
-</ui:composition>
-</html>
+<!-- </ui:composition>
+ --></html>
