--- a/ConfeitariaLogWeb/WebContent/index.xhtml
+++ b/ConfeitariaLogWeb/WebContent/index.xhtml
@@ -15,19 +15,19 @@
 
 	<h:form>
 		<ul>
-			<li><h:commandLink action="funcionarioListagem"
+			<li><p:commandLink action="funcionarioListagem"
 					value="Funcionarios" /></li>
 
-			<li><h:commandLink action="fornecedorListagem"
+			<li><p:commandLink action="fornecedorListagem"
 					value="Fornecedores" /></li>
 					
-			<li><h:commandLink action="categoriaListagem"
+			<li><p:commandLink action="categoriaListagem"
 					value="Categorias" /></li>
 					
-			<li><h:commandLink action="materialListagem"
+			<li><p:commandLink action="materialListagem"
 					value="Materiais" /></li>
 			
-			<li><h:commandLink action="pedidoListagem"
+			<li><p:commandLink action="pedidoListagem"
 					value="Pedidos" /></li>
 		</ul>
 
