--- a/ConfeitariaLogWeb/WebContent/pedidoListagem.xhtml
+++ b/ConfeitariaLogWeb/WebContent/pedidoListagem.xhtml
@@ -40,10 +40,10 @@
 					<f:convertDateTime pattern="dd/MM/yyyy" timeZone="GMT-03:00" />
 				</h:outputText>
 			 </p:column>
-			<p:column>
+<!-- 			<p:column>
 				<f:facet name="header">Fornecedor</f:facet>
 				#{pedido.fornecedor.getId()} 
-			</p:column>
+			</p:column> -->
 			<p:column>
 				<f:facet name="header">Funcionario</f:facet>
 				#{pedido.funcionario.getNome()} 
